--- a/src/scss/_setup.scss
+++ b/src/scss/_setup.scss
@@ -1,10 +1,17 @@
 @import 'compass';
 
-$base-font-size: 18px;
-$base-line-height: 32px;
+$base-font-size: 16px;
+$base-line-height: 28px;
 @include establish-baseline;
 
-$primary-color: #23B5D3;
-$secondary-color: #8BB174;
-$extreme-color: #E57A44;
-$backing-color: #262322;
+$primary-color: #6A81A2;
+$secondary-color: #81F4E1;
+$extreme-color: #FFCEBA;
+$backing-color: #454851;
+
+
+
+body {
+    font-family: 'Arvo', serif;
+    background: rgba($backing-color, 0.4);
+}
