Removed the testing tools had a bug where heroku needs to get all CDN's from https: and not http: the validator was not working because of this... removed the testing tools
validations not working

att2

att3

att4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,12 @@
 
 
 <!-- Javascript setup -->
-<% include partials/template/js %>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+<!-- Bootstrap -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- Main JS file -->
+<script src="assets/main.min.js"></script>
 </body>
 </html>
