--- a/src/scss/_extras.scss
+++ b/src/scss/_extras.scss
@@ -10,6 +10,10 @@
         overflow: hidden;
         text-align: center;
 
+        @media only screen and (max-width: 699px) {
+            @include adjust-font-size-to(28px);
+        }
+
         @media only screen and (max-width: 1199px) {
             height: 15em;
         }
@@ -27,6 +31,8 @@
             width: 2em;
             height: 2em;
             padding-top: 0.4em;
+
+
             }
     }
 }
