--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -14,12 +14,20 @@
         font-weight: bold;
         color: $secondary-color;
         text-shadow: 0 5px 5px $backing-color;
+
+        @media only screen and (max-width: 699px) {
+            @include adjust-font-size-to(50px);
+        }
     }
 
     h3 {
         @include adjust-font-size-to(40px);
         color: scale-saturation($secondary-color, 23%);
         text-shadow: 5px 0 5px $backing-color;
+
+        @media only screen and (max-width: 699px) {
+            @include adjust-font-size-to(28px);
+        }
 
     }
 
