--- a/views/partials/template/head.ejs
+++ b/views/partials/template/head.ejs
@@ -2,7 +2,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name=description content="race roster test">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Sign Up Now!</title>
   <!-- Bootstrap link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
